--- a/package.json
+++ b/package.json
@@ -29,56 +29,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
+    "@angular/animations": "^7.0.3",
     "@angular/cdk": "^7.0.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
+    "@angular/common": "^7.0.3",
+    "@angular/compiler": "^7.0.3",
+    "@angular/core": "^7.0.3",
+    "@angular/forms": "^7.0.3",
     "@angular/material": "^7.0.0",
     "@angular/material-moment-adapter": "^7.0.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "@auth0/angular-jwt": "^2.0.0",
-    "@ngrx/effects": "6.1.0",
-    "@ngrx/router-store": "6.1.0",
-    "@ngrx/store": "6.1.0",
-    "@nrwl/nx": "6.4.0",
+    "@angular/platform-browser": "^7.0.3",
+    "@angular/platform-browser-dynamic": "^7.0.3",
+    "@angular/router": "^7.0.3",
+    "@ngrx/effects": "6.1.2",
+    "@ngrx/entity": "^6.1.0",
+    "@ngrx/router-store": "6.1.2",
+    "@ngrx/store": "6.1.2",
+    "@nrwl/nx": "7.0.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
-    "@ngrx/entity": "6.1.0"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "6.2.4",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
-    "@ngrx/store-devtools": "6.1.0",
-    "@nrwl/schematics": "6.4.0",
+    "@angular-devkit/build-angular": "~0.10.5",
+    "@angular/cli": "7.0.5",
+    "@angular/compiler-cli": "^7.0.3",
+    "@angular/language-service": "^7.0.3",
+    "@ngrx/store-devtools": "6.1.2",
+    "@nrwl/schematics": "7.0.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
+    "@types/node": "~10.12.5",
+    "codelyzer": "~4.5.0",
     "concurrently": "^4.0.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-marbles": "0.3.1",
+    "jasmine-core": "~3.3.0",
+    "jasmine-marbles": "0.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "json-server": "^0.14.0",
-    "karma": "~3.0.0",
+    "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "ngrx-store-freeze": "0.2.4",
-    "prettier": "1.13.7",
+    "prettier": "1.15.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "typescript": "~3.1.6"
   }
 }
